--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+
+    </head>
+    <body>
+        <div>
+            <h1>BUS 001 IT Department</h1>
+        </div>
+    </body>
     <p>Test</p>
 </html>
