--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             display: flex;
             align-items: flex-start;
             gap: 10px;
+            user-select: none;
         }
 
         .buttonHolder div p {
