--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         .sections {
             color: #3b3b3b;
             background-color: #e8e8e8;
-            border: 1px solid #3b3b3b;
+            border: 1px solid #A4A4A4;
             border-radius: 15px;
         }
 
